--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "eslint": "^8.56.0",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "prettier": "^3.2.2",
     "react": "^18",
     "react-dom": "^18",
