--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "The API of AI Directories listed on The Directory",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
